# crud_teste

./: README.md  main.py  requirements.txt
crud_teste/src/db/: dependencies.py
crud_teste/src/sql/: crud.py  database.py  models.py
image-api/: Dockerfile  Makefile  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  postgres_data.db  pyproject.toml  requirements.txt  schemas.py
image-api/app/api/: router.py
image-api/app/api/enderecos/: view.py
image-api/app/api/pessoas/: view.py
image-api/app/repository/: pessoa_repository.py
image-api/app/service/: pessoa_service.py
src/api/: router.py
src/api/product/: view.py
src/api/user/: view.py
src/sql/: schemas.py
