[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["lucas <lucas.lrodrigues@sptech.school>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
boto3 = "1.17.112"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
